Added an 'abstract'

--- a/solutions.tex
+++ b/solutions.tex
@@ -1,6 +1,7 @@
 \documentclass[oneside, openany]{memoir}
 \usepackage[leqno]{amsmath}
 \usepackage{amsthm}
+\usepackage{hyperref}
 \usepackage{thmtools}
 \usepackage{xspace}
 
@@ -36,7 +37,15 @@
 
 \maketitle
 
-These notes contain my solutions to Ravi Vakil's Foundations of Algebraic Geometry. More information will follow.
+\begin{abstract}
+  These notes contain my solutions to Ravi Vakil's Foundations of Algebraic Geometry. For more information I refer you to the official website/blog (\url{http://math216.wordpress.com/}) and the page with the actual notes (\url{http://math.stanford.edu/~vakil/216blog/}).
+  
+  The solutions are provided as is. I don't claim these to be correct or well written (although I certainly intend them to be for my own benefit). If you encounter any flagrant mistakes, you can contact me by e-mail (\url{pieterbelmans@gmail.com}) or add a patch to the GitHub repository at \url{https://github.com/pbelmans/math216}. Please do so by the way, preferably by submitting patches.
+
+  As the notes are still being written when I started writing up these solutions and there may be changes to the numbering system upcoming: I am using the June 27 version. If I am still interested in these exercises when a final version is posted, I might edit in possible changes.
+\end{abstract}
+
+\clearpage
 
 \tableofcontents*
 
@@ -64,4 +73,10 @@ There are no exercises in this chapter.
 
 \chapter{Some properties of schemes}
 \input{ch6.tex}
+
+\part{Morphisms of schemes}
+
+\part{Quasicoherent sheaves}
+
+\part{More}
 \end{document}
