No more line breaks in math, I'll fix the bad boxes later

--- a/solutions.tex
+++ b/solutions.tex
@@ -18,6 +18,9 @@
 \addtolength\parskip{.7ex}
 \setlength\parindent{0cm}
 
+\relpenalty=10000
+\binoppenalty=10000
+
 \setenumerate[1]{label = (\alph*), leftmargin = 18pt}
 
 \swapnumbers
