Turns out I was looking for enumitem's fullwidth option all the time, so much for careful manual reading

--- a/solutions.tex
+++ b/solutions.tex
@@ -21,7 +21,7 @@
 \relpenalty=10000
 \binoppenalty=10000
 
-\setenumerate[1]{label = (\alph*), leftmargin = 18pt}
+\setenumerate[1]{label = (\alph*), fullwidth}
 
 \swapnumbers
 \declaretheoremstyle[headfont = \scshape, bodyfont = \normalfont, qed = \qedsymbol]{foag}
