Solved Exercises 2.3.L to 2.3.O

--- a/ch2.tex
+++ b/ch2.tex
@@ -162,3 +162,29 @@ There are no exercises in this section.
     \item Now both~$B$ and~$C$ carry the desired~$A$\nobreakdash-algebra structure necessary for this multiplication to hold and the result follows from the previous point.
   \end{enumerate}
 \end{exercise}
+
+\begin{exercise}
+  The natural isomorphism is given by
+  \begin{equation}
+    \frac{a}{s}\otimes m\mapsto \frac{am}{s}
+  \end{equation}
+  which is compatible with both the~$S^{-1}A$- and~$A$\nobreakdash-module structure by definition of~$S^{-1}M$. The inverse map is obviously defined as
+  \begin{equation}
+    \frac{m}{s}\mapsto \frac{1}{s}\otimes m
+  \end{equation}
+  and this is the correct inverse because we're tensoring over the ring~$A$.
+\end{exercise}
+
+\begin{exercise}
+  The condition imposed on the elements of the Cartesian product that will act as the fibered product in~$\category{Sets}$ are necessary by the commutativity of the square. The maps~$\projection_X$ and~$\projection_Y$ are the obvious projections on the first or second factor.
+
+  A map~$W\to X\times_Z Y$ is by the agreement of compositions to~$W$ given by using the maps~$W\to X$ and~$W\to Y$ for each component. Now this must be unique: if we'd try to fit in another map the commutativity of the diagram is broken.
+\end{exercise}
+
+\begin{exercise}
+  It is the \emph{union} of the open sets: the fibered product must be an element of the category (which in this case only contains open sets). As for morphisms: these depict inclusion and are either unique or non-existing. So if~$W$ is a map to both~$X$ and~$Y$ which map to~$Z$, we have a chain of inclusions in which we can fit~$X\cup Y$.
+\end{exercise}
+
+\begin{exercise}
+  The definition of fibered product depends on the choice of~$f$ and~$g$. But as~$Z$ is the final object, these morphisms are unique. Now place the product in the position reserved for the fibered product in the definition. As the compositions from~$W$ to~$Z$ agree ($Z$ being final implies uniqueness of these maps, hence equality!) we have a unique isomorphism between these two products.
+\end{exercise}
