--- a/solutions.tex
+++ b/solutions.tex
@@ -64,10 +64,10 @@
 }
 \makeatother
 
-
 \newcommand\ball{\mathrm{B}}
 \newcommand\category[1]{\mathsf{#1}}
 \newcommand\identity{\mathrm{id}}
+\newcommand\projection{\pi}
 
 \DeclareMathOperator\Image{Im}
 \DeclareMathOperator\Mor{Mor}
