--- a/ch2.tex
+++ b/ch2.tex
@@ -182,7 +182,7 @@ There are no exercises in this section.
 \end{exercise}
 
 \begin{exercise}
-  It is the \emph{intersection} of the open sets: the fibered product must be an element of the category (which in this case only contains open sets). As for morphisms: these depict inclusion ($U\subseteq V$ implies $U\to V$à and are either unique or non-existing. So if~$W$ is a map to both~$X$ and~$Y$ which map to~$Z$, we have a chain of inclusions in which we can fit~$W\subseteq X\cap Y$.
+  It is the \emph{intersection} of the open sets: the fibered product must be an element of the category (which in this case only contains open sets). As for morphisms: these depict inclusion ($U\subseteq V$ implies $U\to V$) and are either unique or non-existing. So if~$W$ is a map to both~$X$ and~$Y$ which map to~$Z$, we have a chain of inclusions in which we can fit~$W\subseteq X\cap Y$.
 \end{exercise}
 
 \begin{exercise}
