--- a/ch2.tex
+++ b/ch2.tex
@@ -188,3 +188,13 @@ There are no exercises in this section.
 \begin{exercise}
   The definition of fibered product depends on the choice of~$f$ and~$g$. But as~$Z$ is the final object, these morphisms are unique. Now place the product in the position reserved for the fibered product in the definition. As the compositions from~$W$ to~$Z$ agree ($Z$ being final implies uniqueness of these maps, hence equality!) we have a unique isomorphism between these two products.
 \end{exercise}
+
+\begin{exercise}
+  The projection~$U\to V$ is given by the definition of the fibered product in the second square. The projection~$U\to Y$ is given by composing the projections~$U\to W$ and~$W\to Y$. The compositions of the obtained projections with both~$V\to Z$ and~$X\to Z$ agree by commutativity of the diagram.
+
+  Now take an object~$A$ with maps~$A\to V$ and~$A\to Y$ such that the compositions with~$V\to Z$ and~$Y\to Z$ agree. We wish to consider a unique map~$A\to U$. Consider the map~$A\to W$ (which exists by chasing the diagram), by definition of the first fibered product, this map is unique.
+  
+  Now consider~$A\to V$, we have defined~$V\to Z$ by the composition of projections. By commutativity of the diagram~$A\to W\to X$ and~$A\to V\to X$ agree so we can use the second fibered product. So just construct a unique map~$A\to U$. We have obtained a tower of fibered products.
+
+  Essentially, it boils down to lifting~$A\to Y$ to~$A\to W$ in a unique way.
+\end{exercise}
