--- a/ch2.tex
+++ b/ch2.tex
@@ -198,3 +198,26 @@ There are no exercises in this section.
 
   Essentially, it boils down to lifting~$A\to Y$ to~$A\to W$ in a unique way.
 \end{exercise}
+
+\begin{exercise}
+  Let's draw a picture.
+  \begin{equation}
+    \begin{tikzpicture}[description/.style = {fill = white, inner sep = 2pt}, baseline=(current bounding  box.center)]
+      \matrix (m) [matrix of math nodes, row sep = 3em, column sep = 3em, text height = 1.5ex, text depth = 0.25ex]
+      { X_1\times_Y X_2 & X_2 & X_2 \\
+        X_1 & Y & \\
+        X_1 & & Z \\ };
+      \draw[->] (m-1-1) edge (m-1-2)
+                (m-1-2) edge (m-1-3)
+                (m-1-3) edge (m-3-3)
+                (m-1-1) edge (m-2-1)
+                (m-2-1) edge (m-3-1)
+                (m-3-1) edge (m-3-3)
+                (m-1-2) edge (m-2-2)
+                (m-2-1) edge (m-2-2)
+                (m-2-2) edge (m-3-3);
+    \end{tikzpicture}.
+  \end{equation}
+
+  By definition of~$X_1\times_Y X_2$ the maps to~$Y$ through~$X_1$ and~$X_2$ agree. So the composition with~$Y\to Z$ agrees as well. We can now put the fibered product~$X_1\times_Y X_2$ in the position of~$W$ for the definition of the fibered product~$X_1\times_Z X_2$, obtaining a unique or natural morphism~$X_1\times_Y X_2\to X_1\times_Z X_2$.
+\end{exercise}
