--- a/solutions.tex
+++ b/solutions.tex
@@ -6,6 +6,7 @@
 \usepackage{enumitem}
 \usepackage{hyperref}
 \usepackage{thmtools}
+\usepackage{tikz}
 \usepackage{xspace}
 
 \usepackage{tgpagella}
@@ -13,6 +14,8 @@
 \usepackage{microtype}
 
 \chapterstyle{companion}
+
+\usetikzlibrary{arrows, matrix}
 
 \addtolength\headheight{12pt}
 \addtolength\parskip{.7ex}
