Forgot a remark on the isomorphism in 2.3.V

--- a/ch2.tex
+++ b/ch2.tex
@@ -273,4 +273,6 @@ There are no exercises in this section.
   If~$f\colon X\to Y$ is a monomorphism taking~$X$ as the fibered product proves its existence. The unique map~$Z\to X\times_Y X=X$ is given by~$g_1=g_2$, where~$g_1,g_2\colon Z\to X$.
 
   Conversely, if the fibered product exists we have that~$f\circ g_1=f\circ g_2$ as these maps must agree. Now there is a \emph{unique} map~$Z\to X\times_Y X$ so we obtain~$g_1=g_2$ as~$g_1$ and~$g_2$ both equal the composition of this unique map with the equal projections~$X\times_Y X\to X$.
+
+  By putting~$X$ in the position for a map~$X\to X\times_Y X$ we obtain an induced isomorphism as we can use the identity map~$X\to X$ at both sides in the diagram.
 \end{exercise}
