--- a/solutions.tex
+++ b/solutions.tex
@@ -5,6 +5,7 @@
 \usepackage{colonequals}
 \usepackage{enumitem}
 \usepackage{hyperref}
+\usepackage{mathabx}
 \usepackage{thmtools}
 \usepackage{tikz}
 \usepackage{xspace}
