An extra word of explanation for 2.5.A

--- a/ch2.tex
+++ b/ch2.tex
@@ -382,5 +382,5 @@ There are no exercises in this section.
                 (m-1-3) edge node[auto] {$\tau_{A,B'}$} (m-2-3);
     \end{tikzpicture}
   \end{equation}
-  in an obvious way.
+  in an obvious way, where~$g^*$ is \emph{appending} the morphism to~$f\colon F(A)\to B$.
 \end{exercise}
