--- a/ch2.tex
+++ b/ch2.tex
@@ -384,3 +384,17 @@ There are no exercises in this section.
   \end{equation}
   in an obvious way, where~$g^*$ is \emph{appending} the morphism to~$f\colon F(A)\to B$.
 \end{exercise}
+
+\begin{exercise} % TODO check whether I got all the symbols correct
+  The map~$\eta_A$ should behave somewhat like an identity. If we take
+  \begin{equation}
+    \eta_A\colonequals\tau_{A,F(A)}^{-1}\left( \identity_{F(A)} \right) 
+  \end{equation}
+  with~$\identity_{F(A)}\in\Mor_{\mathcal{B}}(F(A),F(A))$ we find the correct definition.
+  
+  Analogously we take
+  \begin{equation}
+    \epsilon_B\colonequals\tau_{G(B),B}^{-1}\left( \identity_{G(B)} \right)
+  \end{equation}
+  in~$\Mor_{\mathcal{A}}(G\circ F(A),A)$ where~$\identity_{G(B)}\in\Mor_{\mathcal{A}}(G(B),G(B))$.
+\end{exercise}
